[package]
name = "matched-data-cli"
version = "0.1.0"
authors = ["Miguel de Moura <mdemoura@cloudflare.com>"]
description = "Tool to interact with the firewall matched data feature"
edition = "2018"

[dependencies]
bincode = "1.3.1"
generic-array = { version = "0.14.4", features = ["serde"] }
hpke = { version = "0.4.1", features = ["serde_impls"] }
radix64 = "0.6.2"
rand = { version = "0.7.3", features = ["stdweb", "wasm-bindgen"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.59"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]

[profile.release]
lto = true
