[package]
name = "matched_data_wasm"
version = "0.3.0"
authors = ["Miguel de Moura <mdemoura@cloudflare.com>", "Alvis Duong <alvis@cloudflare.com>"]
description = "Tool to interact with the firewall matched data feature"
edition = "2018"
repository = "https://github.com/cloudflare/matched-data-cli"

[features]
default = ["blob_legacy_version"]
blob_legacy_version = ["hpke_legacy"]

[dependencies]
bincode = "1.3.1"
generic-array = { version = "0.14.4", features = ["serde"] }
hpke = { version = "0.5.0", default-features = false, features = ["x25519", "serde_impls"] }
radix64 = "0.6.2"
rand = { version = "0.7.3", features = ["stdweb", "wasm-bindgen"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

hpke_legacy = { package = "hpke", version = "0.4.1", default-features = false, features = ["x25519", "serde_impls"], optional = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]

[profile.release]
lto = true
