[package]
name = "matched-data-cli-wasm"
version = "0.1.0"
authors = ["Alvis Duong <alvis@cloudflare.com>"]
description = "WebAssembly bindings for matched-data-cli"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
radix64 = "0.6.2"
matched-data-cli = { path = "../" }